# OG-BRA

./: .buildinfo  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  genindex.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: build_and_test.yml  deploy_docs.yml  docs_check.yml  publish_to_pypi.yml
OG-BRA-main/: README.md  environment.yml  setup.py
OG-BRA-main/docs/: README.md
OG-BRA-main/docs/book/: _toc.yml
OG-BRA-main/docs/book/content/: citations.md
OG-BRA-main/docs/book/content/api/: input_output.rst
OG-BRA-main/docs/book/content/calibration/: demographics.md  exogenous_parameters.md
OG-BRA-main/ogbra/: MANIFEST.in  income.py
OG-BRA-main/tests/: test_input_output.py
_modules/: index.html
_modules/ogbra/: calibrate.html  income.html  input_output.html  macro_params.html  utils.html
_sources/content/api/: calibrate.rst  income.rst  macro_params.rst
_sources/content/calibration/: demographics.ipynb  demographics.md  earnings.ipynb  exogenous_parameters.ipynb  firms.md  government.md  households.md
_sources/content/calibration/images/: exogenous_parameters_table.md
_sources/content/intro/: intro.md
content/: OGBRA_references.html  citations.html
content/api/: calibrate.html  income.html  input_output.html  macro_params.html  public_api.html  utils.html
content/calibration/: UBI.html  demographics.html  earnings.html  exogenous_parameters.html  firms.html  government.html  households.html  macro.html  matching_lwi.html  taxes.html
content/calibration/images/: exogenous_parameters_table.html
content/contributing/: contributor_guide.html
content/intro/: intro.html
docs/: create_doc_figures.py
docs/book/: OGBRA_references.bib  _config.yml  _toc.yml
docs/book/content/: OGBRA_references.md
docs/book/content/UNtutorial/: getting_started.md
docs/book/content/api/: public_api.rst  utils.rst
docs/book/content/calibration/: UBI.md  demographics.md  earnings.md  exogenous_parameters.md  firms.md  macro.md  taxes.md
docs/book/content/contributing/: contributor_guide.md
docs/book/content/intro/: intro.md
examples/: run_og_bra.py  run_og_bra_multi_industry.py
ogbra/: MANIFEST.in  __init__.py  calibrate.py  constants.py  income.py  input_output.py  macro_params.py  ogbra_default_parameters.json  update_baseline.py  utils.py
ogbra/data/: 002_IFPRI_SAM_BRA_2018_SAM.csv
tests/: test_calibrate.py  test_import_smoke.py  test_income.py  test_macro_params.py  test_run_example.py  test_update_baseline.py
(+2 files in other folders)
